# beadle

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  charter.md  deny.toml  justfile  lefthook.yml  pack.yaml  references.bib  rustfmt.toml
.claude/commands/: dashboard-refresh.md
.claude/rules/: _index.md  rust.md  task-workflow.md
.github/workflows/: ci.yml  release.yml  scorecards.yml
Formula/: beadle.rb
_kos/: kos.yaml
_kos/findings/: finding-001-dashboard-discovery-robustness.md  finding-002-skill-did-not-appreciate-intent.md  finding-003-maintenance-request-controls.md  finding-004-silent-integrity-severity-class.md  finding-005-defect-classification-axes.md  (+17 more)
agents/: README.md  envoy.md  orchestrator.md
crates/beadle/: Cargo.toml
crates/beadle-store/: Cargo.toml
crates/beadle-store/src/: lib.rs
crates/beadle/src/: classify.rs  controls.rs  direction.rs  enumerate.rs  gh.rs  intent.rs  main.rs  migrate.rs  note.rs  push.rs  render.rs  sync.rs  vocab.rs
crates/beadle/tests/: vocabulary_contract.rs
decisions/: adr-001-state-out-of-band.md  adr-002-propose-not-act.md  adr-003-intent-anchor-and-maintainer-compass.md  adr-004-packaging-phasing.md  adr-005-cold-start-no-premature-rate-verdicts.md  index.md
docs/: PHILOSOPHY.md  agent-team.md  dashboard-schema.md  example-dashboard.md  prior-art.md  research-notes.md  store-schema.md
packaging/: Info.plist
prompts/: create-dashboard.md
scripts/: create-app.sh  create-dmg.sh  create-pkg.sh  seed-store.pl
targets/: README.md  _template.intent.yaml  prism.intent.yaml  vsdd-factory.intent.yaml
(+45 files in other folders)
