[workspace]
resolver = "2"
members = ["crates/beadle-store", "crates/beadle"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ArcavenAE/beadle"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
sha2 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
