[package]
name = "beadle-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Append-only JSONL store for beadle target state"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
